# celsp

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cog.toml  mise.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  pr.yml
src/: lib.rs  main.rs  settings.rs
src/document/: mod.rs  region.rs  state.rs  text.rs
src/lsp/: completion.rs  diagnostics.rs  hover.rs  mod.rs  semantic_tokens.rs
src/protovalidate/: builtins.rs  mod.rs  proto_parser.rs
src/types/: builtins.rs  function.rs  mod.rs
tests/: integration.rs
tests/fixtures/basic/: settings.toml
tests/fixtures/extensions/: settings.toml
tests/fixtures/proto/: settings.toml  test.binpb  test.proto
