[package]
name = "celsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ponix-dev/celsp"
authors = ["ponix-dev"]
description = "Language Server Protocol implementation for CEL"
keywords = ["cel", "lsp", "language-server", "ide"]
categories = ["development-tools", "text-editors"]

[dependencies]
cel-core = "0.4"
cel-core-proto = "0.4"
dashmap = "5.5"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
expect-test = "1.5"
